--- a/src/style/mixins/_alert.scss
+++ b/src/style/mixins/_alert.scss
@@ -4,7 +4,9 @@
   border-color: $border;
 
   hr {
-    border-top-color: darken($border, 5%);
+    border: 0;
+    height: 1px;
+    background-color: darken($color, 5%);
   }
 
   a {
