--- a/src/style/mixins/_buttons.scss
+++ b/src/style/mixins/_buttons.scss
@@ -3,11 +3,17 @@
 // Easily pump out default styles, as well as :hover, :focus, :active,
 // and disabled options for all buttons
 
-@mixin button-variant($background, $border, $hover-background: darken($background, 7.5%), $hover-border: darken($border, 10%), $active-background: darken($background, 10%), $active-border: darken($border, 12.5%)) {
+@mixin button-variant($color) {
+  $background: $color;
+  $border: $color;
+  $hover-background: darken($background, 7.5%);
+  $hover-border: darken($border, 10%);
+  $active-background: darken($background, 10%);
+  $active-border: darken($border, 12.5%);
+
   color: color-yiq($background);
-  @include gradient-bg($background);
   border-color: $border;
-  box-shadow: $btn-box-shadow;
+  @include gradient-bg($background);
 
   @include hover {
     color: color-yiq($hover-background);
@@ -17,7 +23,7 @@
 
   &:focus,
   &.focus {
-    box-shadow: $btn-box-shadow, 0 0 0 $btn-focus-width rgba($border, .5);
+    box-shadow: 0 0 0 $btn-focus-width rgba($border, .5);
   }
 
   &.disabled,
@@ -27,17 +33,17 @@
     border-color: $border;
   }
 
-  &:not(:disabled):not(.disabled):active,
-  &:not(:disabled):not(.disabled).active,
-  .show > &.dropdown-toggle {
-    color: color-yiq($active-background);
-    background-color: $active-background;
-    border-color: $active-border;
+  // &:not(:disabled):not(.disabled):active,
+  // &:not(:disabled):not(.disabled).active,
+  // .show > &.dropdown-toggle {
+  //   color: color-yiq($active-background);
+  //   background-color: $active-background;
+  //   border-color: $active-border;
 
-    &:focus {
-      box-shadow: 0 0 0 $btn-focus-width rgba($border, .5);
-    }
-  }
+  //   &:focus {
+  //     box-shadow: 0 0 0 $btn-focus-width rgba($border, .5);
+  //   }
+  // }
 }
 
 @mixin button-outline-variant($color, $color-hover: color-yiq($color), $active-background: $color, $active-border: $color) {
@@ -63,17 +69,17 @@
     background-color: transparent;
   }
 
-  &:not(:disabled):not(.disabled):active,
-  &:not(:disabled):not(.disabled).active,
-  .show > &.dropdown-toggle {
-    color: color-yiq($active-background);
-    background-color: $active-background;
-    border-color: $active-border;
+  // &:not(:disabled):not(.disabled):active,
+  // &:not(:disabled):not(.disabled).active,
+  // .show > &.dropdown-toggle {
+  //   color: color-yiq($active-background);
+  //   background-color: $active-background;
+  //   border-color: $active-border;
 
-    &:focus {
-      box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
-    }
-  }
+  //   &:focus {
+  //     box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
+  //   }
+  // }
 }
 
 // Button sizes
