feat: delete utilities

--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -16,7 +16,7 @@
 // @import "mixins/text-truncate";
 // @import "mixins/visibility";
 
-// // Components
+// Components
 @import "mixins/alert";
 @import "mixins/buttons";
 // @import "mixins/caret";
@@ -26,11 +26,11 @@
 // @import "mixins/forms";
 // @import "mixins/table-row";
 
-// // Skins
-@import "mixins/background-variant";
+// Skins
+// @import "mixins/background-variant";
 @import "mixins/gradients";
 
-// // Layout
+// Layout
 @import "mixins/clearfix";
 @import "mixins/grid-framework";
 @import "mixins/grid";
