--- a/site/component/app.scss
+++ b/site/component/app.scss
@@ -49,3 +49,12 @@
 .module-title {
   margin-bottom: 6px;
 }
+
+code {
+  margin: 0 1px;
+  padding: .2em .4em;
+  border: 1px solid #eee;
+  background-color: #f2f4f5;
+  border-radius: 3px;
+  font-size: .9em;
+}
