--- a/site/component/common/example.scss
+++ b/site/component/common/example.scss
@@ -9,6 +9,13 @@
   }
 
   // prism code css
+  code[class*="language-"] {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+    border-radius: 0;
+  }
   code[class*="language-"],
   pre[class*="language-"] {
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
@@ -144,15 +151,6 @@
   > p {
     margin: 0;
     padding: 0;
-  }
-
-  code {
-    margin: 0 1px;
-    background-color: #f2f4f5;
-    padding: .2em .4em;
-    border-radius: 3px;
-    font-size: .9em;
-    border: 1px solid #eee;
   }
 }
 
