--- a/src/message/style.scss
+++ b/src/message/style.scss
@@ -4,11 +4,19 @@
 
 $prefix-cls: 'dk-msg';
 
-.#{message-prefix} {
+.#{$prefix-cls} {
   position: fixed;
   z-index: 10600;
   max-width: 50%;
   left: 50%;
   top: 20px;
   transform: translateX(-50%);
+
+  &-item {
+    display: flex;
+  }
+
+  &-content {
+    margin: 0 auto 20px;
+  }
 }
