--- a/src/alert/style.scss
+++ b/src/alert/style.scss
@@ -28,18 +28,17 @@ $prefix-cls: 'dk-alert';
   }
 
   &-enter-active {
-    background-color: #000;
     opacity: 1;
     transform: scaleY(1);
     transition: transform 0.216s, opacity 0.216s ease-in;
   }
 
-  &-leave {
+  &-exit {
     opacity: 1;
     transform: scaleY(1);
   }
 
-  &-leave-active {
+  &-exit-active {
     opacity: 0;
     transform: scaleY(0);
     transition: transform 0.216s, opacity 0.216s ease-out;
@@ -90,7 +89,7 @@ $prefix-cls: 'dk-alert';
   @each $type, $color in $alert-type-colors {
     &-#{$type} {
       @include alert-variant(
-        theme-color-level($color, $alert-bg-level), 
+        theme-color-level($color, $alert-bg-level),
         theme-color-level($color, $alert-border-level),
         theme-color-level($color, $alert-color-level)
       );
