feat: message docs

--- a/src/alert/style.scss
+++ b/src/alert/style.scss
@@ -71,6 +71,7 @@ $prefix-cls: 'dk-alert';
     position: absolute;
     top: 0;
     left: $alert-padding-x;
+    height: 100%;
     display: flex;
     align-items: center;
 
