--- a/src/style/mixins/_buttons.scss
+++ b/src/style/mixins/_buttons.scss
@@ -11,7 +11,7 @@
   $active-background: darken($background, 10%);
   $active-border: darken($border, 12.5%);
 
-  color: color-yiq($background);
+  color: $white;
   border-color: $border;
   @include gradient-bg($background);
 
