--- a/src/spin/style.scss
+++ b/src/spin/style.scss
@@ -2,7 +2,7 @@
 @import '../style/theme';
 @import '../style/mixins';
 
-$prefix-cls: 'dashkit-spin';
+$prefix-cls: 'dk-spin';
 
 .#{$prefix-cls} {
   display: none;
