--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -3,35 +3,18 @@
 // Used in conjunction with global variables to enable certain theme features.
 
 // Utilities
-// @import "mixins/breakpoints";
 @import "mixins/hover";
+@import "mixins/clearfix";
+@import "mixins/gradients";
 // @import "mixins/image";
-// @import "mixins/badge";
-// @import "mixins/resize";
-// @import "mixins/screen-reader";
-// @import "mixins/size";
-// @import "mixins/reset-text";
-// @import "mixins/text-emphasis";
-// @import "mixins/text-hide";
-// @import "mixins/text-truncate";
+// @import "mixins/text";
 // @import "mixins/visibility";
 
 // Components
 @import "mixins/alert";
 @import "mixins/buttons";
-// @import "mixins/caret";
+// @import "mixins/badge";
+// @import "mixins/breakpoints";
 // @import "mixins/lists";
-// @import "mixins/list-group";
-// @import "mixins/nav-divider";
 // @import "mixins/forms";
 // @import "mixins/table-row";
-
-// Skins
-// @import "mixins/background-variant";
-@import "mixins/gradients";
-
-// Layout
-@import "mixins/clearfix";
-@import "mixins/grid-framework";
-@import "mixins/grid";
-@import "mixins/float";
