--- a/src/style/mixins/_lists.scss
+++ b/src/style/mixins/_lists.scss
@@ -5,3 +5,23 @@
   padding-left: 0;
   list-style: none;
 }
+
+@mixin list-group-item-variant($state, $background, $color) {
+  .list-group-item-#{$state} {
+    color: $color;
+    background-color: $background;
+
+    &.list-group-item-action {
+      @include hover-focus {
+        color: $color;
+        background-color: darken($background, 5%);
+      }
+
+      &.active {
+        color: $white;
+        background-color: $color;
+        border-color: $color;
+      }
+    }
+  }
+}
