--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -13,6 +13,7 @@
 // Components
 @import "mixins/alert";
 @import "mixins/buttons";
+@import "mixins/grid";
 // @import "mixins/badge";
 // @import "mixins/breakpoints";
 // @import "mixins/lists";
